# Spfcfuture

./: .gitignore  README.md  RESPOSTAS.md  TEST_EXPLAINABILITY.md  pyproject.toml  requirements.txt
src/: __init__.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  artifact_store.py  football_models.py  models.py  test_catalog.py
src/opponent_prep/: game_plan.py  opponent_analyzer.py  opponent_fixtures.py
src/spfc_base/: decision_memory.py  knowledge_base.py
src/squad_intelligence/: squad_analyzer.py  squad_fixtures.py
src/web/: __init__.py  local_app.py
src/web/static/css/: style.css
src/web/templates/: base.html  error.html  game_plan.html  home.html  knowledge_base.html  opponent_detail.html  opponents.html  run_detail.html  runs.html  squad.html  test_health.html
tests/: conftest.py
tests/cli/: test_cli.py
tests/core/: test_artifact_store.py  test_models.py  test_test_catalog.py
tests/opponent_prep/: test_game_plan.py  test_opponent_analyzer.py  test_opponent_fixtures.py
tests/spfc_base/: test_decision_memory.py  test_knowledge_base.py
tests/squad_intelligence/: test_squad_analyzer.py  test_squad_fixtures.py
tests/web/: test_phase2_routes.py  test_phase4_routes.py  test_routes.py
